<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.suiki.ikuseiapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
        android:id="@+id/action_homeFragment_to_inputFragment"
        app:destination="@id/navigation_input" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.suiki.ikuseiapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.suiki.ikuseiapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_input"
        android:name="com.example.suiki.ikuseiapp.input"
        android:label="入力"
        tools:layout="@layout/fragment_input">
        <action
            android:id="@+id/action_inputFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>